--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -9,8 +9,8 @@
 
 $max-width: 590px;
 @mixin constraints {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   max-width: $max-width;
   max-height: 680px;
 }
@@ -72,7 +72,7 @@ $max-width: 590px;
     display: flex;
     transition: all 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
     &__image {
-      width: 100%;
+      width: 100vw;
       max-width: $max-width;
     }
   }
